--- a/index.css
+++ b/index.css
@@ -8,14 +8,13 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 45px;
 }
 
 .dark-theme {
     background: url(images/back1.jpg);
     background-size: cover;
     color: #eee;
-    padding-right: 0px;
 }
 
 .navigation {
@@ -38,8 +37,8 @@ h2 {
 }
 
 img {
-    width: 150px;
-    height: 150px;
+    width: 125px;
+    height: 125px;
 }
 
 .btn {
@@ -71,13 +70,13 @@ img {
 .text_scores {
     display: flex;
     flex-direction: row;
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .text {
     margin: 50px;
     font-weight: bold;
-    border: 2px solid black;
+    border: 1px solid black;
     background-color: rgba(173, 197, 179, 0.7);
     padding: 15px;
 
@@ -86,7 +85,7 @@ img {
 .dark-text {
     margin: 50px;
     font-weight: bold;
-    border: 2px solid black;
+    border: 1px solid black;
     background-color: rgba(52, 55, 78, 0.7);
     padding: 15px;
 }
@@ -97,16 +96,17 @@ img {
 }
 
 .msg {
-    font-size: 32px;
+    font-size: 25px;
     transform: translateY(-50px);
 }
 
 .playagain {
     border-radius: 25%;
-    height: 70px;
-    font-size: 25px;
-    padding: 30px;
-    padding-top: 16px;
+    height: 50px;
+    font-size: 16px;
+    padding: 15px;
+    padding-top: 13px;
+    transform: translateY(-50px);
 
 }
 
